# ghs-gendaqapi-python

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py  spec-file.txt
docs/: CNAME  index.md
docs/doctrees/: acquisition.doctree  can_fieldbus.doctree  channel.doctree  channelanalog.doctree  channeltimer.doctree  connections.doctree  continuous.doctree  environment.pickle  fieldbus.doctree  formulas.doctree  ghspyapi.doctree  index.doctree  introduction.doctree  recorder.doctree  (+7 more)
examples/: example_acquisition.py  example_can_fieldbus.py  example_channel.py  example_connections.py  example_continuous.py  example_fieldbus.py  example_formulas.py  example_mainframe.py  example_manage_mainframe_settings.py  example_manage_recordings.py  example_predefined_configurations.py  example_recorder.py  example_ringbuffer.py  example_sweep.py
functionaltest/: test_acquisition.py  test_channel.py  test_connections.py  test_fieldbus.py  test_mainframe.py  test_manage_mainframe_settings.py  test_manage_recordings.py  test_recorder.py  test_suite.py
source/: acquisition.rst  channel.rst  channelanalog.rst  conf.py  fieldbus.rst  formulas.rst  ghspyapi.rst  index.rst  recorder.rst  releasenotes.rst  remarks.rst  sweep.rst
tests/: test_connections.py  test_suit.py
unittest/: test_acquisition_api.py  test_channel_api.py  test_connection_api.py  test_connection_handler.py  test_demo.py  test_fieldbus_api.py  test_json.py  test_mainframe_api.py  test_manage_mainframe_settings.py  test_manage_recordings.py  test_recorder_api.py  test_suite.py
(+71 files in other folders)
