[metadata]
name = ghs-gendaqapi-py
version = 1.0.3
author = Vishal Goel
author_email = ext_VGOEL@hbm.com
description = Setup, control and acquire data from the Genesis Highspeed systems via python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hbk-world/ghs-gendaqapi-python
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
    Documentation = https://hbk-world.github.io/ghs-gendaqapi-python/html/index.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src